--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -198,11 +198,13 @@ table.dataTable thead .sorting_desc {
 }
 .user-details {
     cursor: pointer;
+    height: 150px;
 }
 
 .profile-img-modal {
     border-radius: 10px;
     height: 200px;
+    width: 200px;
     /* border: 2px solid rgba( 0, 0, 0, 0.5 ); */
 }
 .profile-start,
@@ -237,4 +239,9 @@ table.dataTable thead .sorting_desc {
 
 .similar-profiles {
     border-top: 0.5px solid rgb(128, 124, 124);
+}
+
+.speaker-social-media li {
+    display: inline;
+    margin-right: 5px;
 }
