--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -245,5 +245,38 @@ table.dataTable thead .sorting_desc {
     margin-right: 5px;
 }
 
+.text-theme {
+    color: #83ccaf;
+}
 
-/* event feed styles */
+.speaker-img {
+    height: 60px;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+}
+
+.speaker-img-modal {
+    height: 40px;
+    border-radius: 50%;
+}
+
+.ms-panel .bg-darker{
+    background-color: #171629;
+}
+.view-all {
+    cursor: pointer;
+}
+/* event shedule */
+.event-date-shedule li {
+    margin-top: 30px;
+}
+.btn-theme {
+    background-color: #83ccaf !important;
+}
+
+.event-date-shedule .btn-theme {
+    font-size: 20px;
+    font-weight: 900;
+    color: white;
+    text-transform: uppercase;
+}
