--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -181,7 +181,8 @@ table.dataTable thead .sorting_desc {
 }
 
 .btn-chat {
-    background: linear-gradient(0deg, #60b3c2 0%, #76c2b3 57.68%, #80c9ac 100%);
+    /* background: linear-gradient(0deg, #60b3c2 0%, #76c2b3 57.68%, #80c9ac 100%); */
+    background-image: linear-gradient(to right, rgb(0, 198, 255) 0%, rgb(0, 114, 255) 51%, rgb(0, 198, 255) 100%);
     outline: none;
     box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 11%),
         0px 1px 3px 0px rgb(0 0 0 / 6%);
@@ -246,7 +247,7 @@ table.dataTable thead .sorting_desc {
 }
 
 .text-theme {
-    color: #83ccaf;
+    color: #07d1f1;
 }
 
 .speaker-img {
@@ -271,7 +272,7 @@ table.dataTable thead .sorting_desc {
     margin-top: 30px;
 }
 .btn-theme {
-    background-color: #83ccaf !important;
+    background-color: #07d1f1 !important;
 }
 
 .event-date-shedule .btn-theme {
@@ -279,4 +280,13 @@ table.dataTable thead .sorting_desc {
     font-weight: 900;
     color: white;
     text-transform: uppercase;
+}
+
+/* .agenda-cards .ms-panel {
+    border-radius: 20px 20px 0px 0px;
+} */
+.event-shedule li a {
+    font-weight: 600;
+    color: #a5a5a5;
+    /* font-size: 16px; */
 }
