--- a/public/landing/css/main.css
+++ b/public/landing/css/main.css
@@ -54,7 +54,7 @@ strong { font-weight: 400; }
    ========================================================================== */
 
 .hero-section {
-  background: url() center center no-repeat scroll;
+  background: url('https://cdn.pixabay.com/photo/2011/11/03/19/10/meeting-room-10270_960_720.jpg') center center no-repeat scroll;
   background-size: cover;
   padding: 0 0 9em;
   position: relative;
@@ -393,6 +393,14 @@ transform:translateY(0);
   border-radius: 10px;
   transition: all 1s ease;
   width: 200px;
+}
+
+.event-sponsors figure img {
+    border-radius: 10px;
+    border: 1px solid rgba( 0, 0, 0, 0.1 );
+    transition: all 1s ease;
+    width: 100px;
+    height: 100px;
 }
 
 .nav>li>a { padding: 12px 16px; }
