--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6723,9 +6723,9 @@ body:not(.ms-settings-open) .ms-settings-toggle:hover{
 
 
 /* ============================================================================================================= */
-.company-logo{
+/* .company-logo{
   border: 1px solid rgba( 0, 0, 0, 0.1 );
-}
+} */
 
 .ms-panel{
   border-radius: 10px;
