--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5740,7 +5740,7 @@ li .ms-count{
   left: 0;
   width: 150px;
   height: 100%;
-  background-color: #5d5cac;
+  background-color: #17a2b8;
   z-index: 2;
   display: flex;
   justify-content: flex-start;
