--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -301,3 +301,22 @@ table.dataTable thead .sorting_desc {
     background-position: center;
     width: 100%;
 }
+/* .newroom #news-flash li p {
+    color: #17a2b8!important;
+} */
+.newroom .ms-card-body {
+    text-transform: uppercase;
+}
+
+/* .newroom .count p {
+    border: 1px solid black;
+    padding: 10px;
+    width: 40px;
+} */
+.btn-category {
+    padding: 5px !important;
+    min-width: 10px;
+}
+.btn-category:hover {
+    color: black;
+}
