--- a/public/landing/css/responsive.css
+++ b/public/landing/css/responsive.css
@@ -1,5 +1,5 @@
 /*
-* menu responsive 
+* menu responsive
 */
 
 @media (min-width: 1025px) {
@@ -8,14 +8,14 @@
     }
 }
 
-@media(max-width: 1024px) {
+@media (max-width: 1024px) {
     .header-fixed {
         position: relative;
         top: 0;
         margin-top: 0;
     }
     .header.header-1 {
-        background: #89C651;
+        background: #89c651;
     }
     .navbar-header {
         width: 100%;
@@ -35,14 +35,20 @@
         margin-top: 36px;
         margin-bottom: 0;
     }
-    .navbar-default .navbar-toggle:hover {border-color: #07d1f1;}
-    .navbar-default .navbar-toggle .icon-bar {background: #07d1f1;}
-    .navbar-default .navbar-toggle:hover .icon-bar {background: #07d1f1;}
+    .navbar-default .navbar-toggle:hover {
+        border-color: #07d1f1;
+    }
+    .navbar-default .navbar-toggle .icon-bar {
+        background: #07d1f1;
+    }
+    .navbar-default .navbar-toggle:hover .icon-bar {
+        background: #07d1f1;
+    }
     .navbar-collapse.collapse {
-        display: none!important;
-        height: 0!important;
+        display: none !important;
+        height: 0 !important;
         padding-bottom: 0;
-        overflow: auto!important;
+        overflow: auto !important;
         width: 100%;
     }
     .navbar-default .navbar-collapse {
@@ -108,7 +114,7 @@
         display: none;
     }
     .header-navigation.navbar .nav > li + li {
-        margin: 0 !important;   
+        margin: 0 !important;
         padding: 0 !important;
         border-top: 1px dashed #282828;
         display: block;
@@ -133,8 +139,11 @@
         background-image: none;
         border: 1px solid #fff;
         border-radius: 4px;
-        padding: 9px 9px; 
-        position: absolute;top:0;right:0;margin-top: 8px;
+        padding: 9px 9px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 8px;
         margin-right: 10px;
     }
     .header-navigation.navbar .navbar-nav .sub-nav-toggler .icon-bar {
@@ -144,54 +153,177 @@
         height: 1px;
         width: 20px;
     }
-    .header-navigation.navbar .navbar-nav .sub-nav-toggler .icon-bar + .icon-bar {
-        margin-top: 4px;        
+    .header-navigation.navbar
+        .navbar-nav
+        .sub-nav-toggler
+        .icon-bar
+        + .icon-bar {
+        margin-top: 4px;
     }
-    .header-navigation.navbar .nav li a {position: relative;}
-    .header-navigation.navbar .navbar-nav > li > .sub-menu li a {padding: 10px 0 10px 20px;}
-    .header-navigation.navbar .right-box.nav > li > .sub-menu form {width: 100%;}
-    .header-navigation.navbar .navbar-header {padding-bottom: 20px;}
-    .stricky-fixed.header-navigation.navbar .navbar-header {padding-bottom: 0px;}
-    .stricky-fixed.header-navigation.navbar .navbar-toggle {margin: 19px 0 !important;}
+    .header-navigation.navbar .nav li a {
+        position: relative;
+    }
+    .header-navigation.navbar .navbar-nav > li > .sub-menu li a {
+        padding: 10px 0 10px 20px;
+    }
+    .header-navigation.navbar .right-box.nav > li > .sub-menu form {
+        width: 100%;
+    }
+    .header-navigation.navbar .navbar-header {
+        padding-bottom: 20px;
+    }
+    .stricky-fixed.header-navigation.navbar .navbar-header {
+        padding-bottom: 0px;
+    }
+    .stricky-fixed.header-navigation.navbar .navbar-toggle {
+        margin: 19px 0 !important;
+    }
 
-    .header.header-2 .header-navigation.navbar .navbar-toggle {margin: 32px 0;border-color: #333;}
-    .header.header-2 .header-navigation.navbar .navbar-toggle .icon-bar {background: #333;}
-    .header.header-2 .header-navigation.navbar .nav > li {padding: 0;}
-    .header.header-2 .header-navigation.navbar .nav > li > a {color: #fff;}
-    .header.header-2 .header-navigation.navbar .nav > li > a:hover {color: #07d1f1;}
+    .header.header-2 .header-navigation.navbar .navbar-toggle {
+        margin: 32px 0;
+        border-color: #333;
+    }
+    .header.header-2 .header-navigation.navbar .navbar-toggle .icon-bar {
+        background: #333;
+    }
+    .header.header-2 .header-navigation.navbar .nav > li {
+        padding: 0;
+    }
+    .header.header-2 .header-navigation.navbar .nav > li > a {
+        color: #fff;
+    }
+    .header.header-2 .header-navigation.navbar .nav > li > a:hover {
+        color: #07d1f1;
+    }
 
-    .header.header-3 .header-navigation.navbar .navbar-toggle {margin: 20px 0 0;border-color: #2B3134;}
-    .header.header-3 .header-navigation.navbar .navbar-toggle .icon-bar {background: #2B3134;}
+    .header.header-3 .header-navigation.navbar .navbar-toggle {
+        margin: 20px 0 0;
+        border-color: #2b3134;
+    }
+    .header.header-3 .header-navigation.navbar .navbar-toggle .icon-bar {
+        background: #2b3134;
+    }
 
-    .header.header-5 {background: #000;}
-    .header.header-5 .header-navigation.navbar .navbar-toggle {margin: 40px 0;margin-bottom: 0;}
+    .header.header-5 {
+        background: #000;
+    }
+    .header.header-5 .header-navigation.navbar .navbar-toggle {
+        margin: 40px 0;
+        margin-bottom: 0;
+    }
 }
 
-@media(max-width: 1024px) {
-    img {max-width: 100%;}
+@media (max-width: 1024px) {
+    img {
+        max-width: 100%;
+    }
     .container {
         padding-left: 15px;
         padding-right: 15px;
     }
 }
 
-@media(max-width: 768px) {
-    .banner-form {margin-top: 50px;}
-    .about-section img {margin-top: 50px;}
-    .counter-section .col-md-3 {margin-top: 30px;}
-    .single-choose-a-plan-section {max-width: 370px;margin-left: auto;margin-right: auto;margin-top: 30px;}
-	.single-blog-post {max-width: 370px;margin-left: auto;margin-right: auto;margin-top: 30px;}
-    .sponsor-img-list img {margin-bottom: 10px;}
-    footer .link-widget {padding-left: 0;}
-	.single-blog-post-page .single-blog-post {max-width: 100%;}
-    footer .about-widget, footer .link-widget {margin-bottom: 50px;}
-    .schedule-section .table {min-width: 1024px;}
-    .sidebar-wrapper {padding-left: 0;margin-top: 50px;}
+@media (max-width: 768px) {
+    .banner-form {
+        margin-top: 50px;
+    }
+    .about-section img {
+        margin-top: 50px;
+    }
+    .counter-section .col-md-3 {
+        margin-top: 30px;
+    }
+    .single-choose-a-plan-section {
+        max-width: 370px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+    }
+    .single-blog-post {
+        max-width: 370px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+    }
+    .sponsor-img-list img {
+        margin-bottom: 10px;
+    }
+    footer .link-widget {
+        padding-left: 0;
+    }
+    .single-blog-post-page .single-blog-post {
+        max-width: 100%;
+    }
+    footer .about-widget,
+    footer .link-widget {
+        margin-bottom: 50px;
+    }
+    .schedule-section .table {
+        min-width: 1024px;
+    }
+    .sidebar-wrapper {
+        padding-left: 0;
+        margin-top: 50px;
+    }
 }
-@media(max-width: 480px) {
-    .banner h2 {font-size: 34px;line-height: 40px;}
-    .subscribe-section .half-overlay .inner-content {padding-left: 15px;padding-right: 15px;}
-    .single-blog-post .post-meta li a {padding: 20px 6px;}
-    .footer-bottom .left-text {width: 100%;text-align: center;}
-    .footer-bottom .social {width: 100%;text-align: center;}
+@media (max-width: 480px) {
+    .banner h2 {
+        font-size: 15px;
+        line-height: 20px;
+    }
+    .subscribe-section .half-overlay .inner-content {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .single-blog-post .post-meta li a {
+        padding: 20px 6px;
+    }
+    .footer-bottom .left-text {
+        width: 100%;
+        text-align: center;
+    }
+    .footer-bottom .social {
+        width: 100%;
+        text-align: center;
+    }
+    .banner h1 {
+        font-size: 30px;
+        line-height: 30px;
+    }
+    .banner p {
+        font-size: 15px;
+        margin-left: 5px;
+    }
+
+    .buttons-div .btn {
+        margin-bottom: 10px;
+    }
+    .text-below {
+        font-size: 16px;
+    }
+    .about-section hr,
+    .speaker-section hr,
+    .sponsors-section hr,
+    .newsroom-section hr,
+    .event-sponsor hr,
+    .schedule-section hr {
+        display: none;
+    }
+
+    .line-after {
+        text-decoration: underline;
+        font-size: 3rem;
+    }
+
+    .about-section .black {
+        font-size: 1.8rem;
+    }
+
+    .schedule-time-container .schedule-speakers-content {
+        margin-left: 0;
+    }
+
+    .schedule-content h2 {
+        font-size: 2rem;
+    }
 }
