--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -205,7 +205,7 @@ body {
 
 .banner {
   background: #000
-    url("https://www2.law.temple.edu/10q/wp-content/uploads/2019/11/photo-copy-scaled.jpg")
+    url("https://images.unsplash.com/photo-1519750157634-b6d493a0f77c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80")
     0 0 no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
