--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -196,12 +196,13 @@ table.dataTable thead .sorting_desc {
 
 .btn-chat {
     /* background: linear-gradient(0deg, #60b3c2 0%, #76c2b3 57.68%, #80c9ac 100%); */
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
         to right,
         rgb(0, 198, 255) 0%,
         rgb(0, 114, 255) 51%,
         rgb(0, 198, 255) 100%
-    );
+    ); */
+    background-image: linear-gradient(315deg, #60dfcd 0%, #1e9afe 74%);
     outline: none;
     box-shadow: 0px 2px 2px 0px rgb(0 0 0 / 11%),
         0px 1px 3px 0px rgb(0 0 0 / 6%);
@@ -270,7 +271,7 @@ table.dataTable thead .sorting_desc {
 }
 
 .speaker-img {
-    height: 60px;
+    height: 40px;
     border-radius: 50%;
     margin-right: 1.5rem;
 }
@@ -334,4 +335,8 @@ table.dataTable thead .sorting_desc {
 }
 .btn-category:hover {
     color: black;
+}
+
+.agenda-card {
+    height: 410px;
 }
